      donated to the enscript project and should not be provided by the
      octave package in the future.
    + Do not install the documentation file THANKS for octave3.1 since
      this file is not distributed anymore
    + Set api_version equal to 34 for octave3.1
    + Use versioned prefixes for the Octave packages directory
  * debian/in/PACKAGE.postinst: Do not generate the ls-R kpathsea database
    file.  It is not used by Octave anymore.
  * debian/in/PACKAGE.conf: Use versioned prefixes for the Octave packages
    directory
  * debian/in/PACKAGE-common.lintian-overrides: Adjust for the nwe
    versioned packages directory

 -- Rafael Laboissiere <rafael@debian.org>  Fri, 06 Feb 2009 11:23:15 +0100

octave3.0 (1:3.0.1-7) unstable; urgency=low

  * Upload to unstable, such that the package will have a higher version
    number in this distribution in comparison with testing.  This is
    necessary, otherwise the Debian installer refuses to install the
    previous version in testing-proposed-updates.

 -- Rafael Laboissiere <rafael@debian.org>  Sat, 07 Feb 2009 17:32:48 +0100

octave3.0 (1:3.0.1-6lenny3) testing-proposed-updates; urgency=low

  * Upload to t-p-u in order to get the correct dependencies for lenny, in
    particular libpcre3

 -- Rafael Laboissiere <rafael@debian.org>  Sat, 07 Feb 2009 11:54:49 +0100

octave3.1 (3.1.51-4) experimental; urgency=low

  * Synch with octave3.0.
  * debian/patches/sane-file-stat-return.dpatch: Avoid random errors when
    calling fopen on files that do not exist in the file system

 -- Rafael Laboissiere <rafael@debian.org>  Wed, 04 Feb 2009 14:00:42 +0100

octave3.0 (1:3.0.4~rc3-2) experimental; urgency=low

  [ Thomas Weber ]
  * Synch with the lenny branch.  In particular, let Octave provide the
    /usr/share/octave/packages/ directory (addresses Bug#513576), which
    should be in the octaveX.X-common package

  [ Rafael Laboissiere ]
  * debian/in/PACKAGE-common.lintian-overrides: Add an override for the