@@ -20,14 +20,16 @@ octave3.1 (3.1.52-1) UNRELEASED; urgency=low
       this file is not distributed anymore
     + Set api_version equal to 34 for octave3.1
     + Use versioned prefixes for the Octave packages directory
+    + Only install the PDF files that are really final documents and not
+      the figures in PDF format under doc/*/
   * debian/in/PACKAGE.postinst: Do not generate the ls-R kpathsea database
     file.  It is not used by Octave anymore.
   * debian/in/PACKAGE.conf: Use versioned prefixes for the Octave packages
     directory
-  * debian/in/PACKAGE-common.lintian-overrides: Adjust for the nwe
+  * debian/in/PACKAGE-common.lintian-overrides: Adjust for the new
     versioned packages directory
 
- -- Rafael Laboissiere <rafael@debian.org>  Fri, 06 Feb 2009 11:23:15 +0100
+ -- Rafael Laboissiere <rafael@debian.org>  Wed, 11 Feb 2009 12:48:43 +0000
 
 octave3.0 (1:3.0.1-7) unstable; urgency=low
 
